# TwoLink_Manipulator

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/Bot/: CMakeLists.txt  Sbot.cpp  Sbot.h  State.h  s_bot.cpp  s_bot.h
Source/Common/: Common.cpp  Common.h
Source/ExecutionInterface/: CMakeLists.txt  ExecInterface.cpp  ExecInterface.h
Source/OperationInterface/: CMakeLists.txt  OpInterface.cpp  OpInterface.h
Source/Solvers/: CMakeLists.txt  FKinematics.cpp  FKinematics.h  InvKinematics.cpp  InvKinematics.h  TorqueCtrl.cpp  TorqueCtrl.h  TrapezTrajectory .cpp  TrapezTrajectory.h  TrpzTrajectory.cpp  TrpzTrajectory.h  VelocityKinematics.cpp  VelocityKinematics.h
Source/TorqueCtrl/: CMakeLists.txt  TorqueCtrl.cpp
Test/: CMakeLists.txt  Dynamics_test.cpp  FKinematics_test.cpp  InvKinematics_test.cpp  Pendulum_test.cpp  Test_lib.cpp  TorqueCtrl_test.cpp  TrpzTrajectory_test.cpp
build /: CMakeCache.txt  Makefile  cmake_install.cmake
build /App/: Makefile  cmake_install.cmake
build /Source/: Makefile  cmake_install.cmake
build /Source/Bot/: Makefile  cmake_install.cmake
build /Source/OperationInterface/: Makefile  cmake_install.cmake
build /Source/Solvers/: Makefile  cmake_install.cmake
build /Test/: Makefile  cmake_install.cmake
build /language_tests/Fortran/: CMakeCache.txt
